@@ -1,18 +1,20 @@
 package dev.xylonity.nomendubium.common.recipe;
 
-import com.google.gson.JsonArray;
-import com.google.gson.JsonElement;
-import com.google.gson.JsonObject;
+import com.mojang.datafixers.util.Either;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import dev.xylonity.nomendubium.registry.NomenDubiumItems;
 import dev.xylonity.nomendubium.registry.NomenDubiumRecipes;
-import net.minecraft.core.RegistryAccess;
+import java.util.ArrayList;
+import java.util.List;
+import net.minecraft.core.HolderLookup;
 import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.network.FriendlyByteBuf;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.tags.ItemTags;
-import net.minecraft.tags.TagKey;
 import net.minecraft.core.registries.Registries;
-import net.minecraft.util.GsonHelper;
+import net.minecraft.network.RegistryFriendlyByteBuf;
+import net.minecraft.network.codec.StreamCodec;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.tags.TagKey;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
@@ -22,11 +24,7 @@ import net.minecraft.world.item.crafting.RecipeSerializer;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.level.Level;
 
-import java.util.ArrayList;
-import java.util.List;
-
 public record TreeOfLifeRecipe(
-        ResourceLocation id,
         Ingredient ingredient,
         int rootOfLifeCount,
         int processingTime,
@@ -35,6 +33,10 @@ public record TreeOfLifeRecipe(
 
     public TreeOfLifeRecipe {
         results = List.copyOf(results);
+        if (results.isEmpty()) {
+            throw new IllegalArgumentException("A Tree of Life recipe must have a result");
+        }
+
     }
 
     @Override
@@ -42,15 +44,17 @@ public record TreeOfLifeRecipe(
         return isIngredient(input.ingredient()) && input.rootOfLife().is(NomenDubiumItems.ROOT_OF_LIFE.get()) && input.rootOfLife().getCount() >= this.rootOfLifeCount;
     }
 
-    public boolean isIngredient(ItemStack stack) { return this.ingredient.test(stack); }
+    public boolean isIngredient(ItemStack stack) {
+        return this.ingredient.test(stack);
+    }
 
     @Override
-    public ItemStack assemble(TreeOfLifeRecipeInput input, RegistryAccess registries) {
-        return this.results.isEmpty() ? ItemStack.EMPTY : this.results.get(0).copy();
+    public ItemStack assemble(TreeOfLifeRecipeInput input, HolderLookup.Provider registries) {
+        return this.results.getFirst().copy();
     }
 
     public ItemStack random(RandomSource random) {
-        return this.results.isEmpty() ? ItemStack.EMPTY : this.results.get(random.nextInt(this.results.size())).copy();
+        return this.results.get(random.nextInt(this.results.size())).copy();
     }
 
     @Override
@@ -59,8 +63,8 @@ public record TreeOfLifeRecipe(
     }
 
     @Override
-    public ItemStack getResultItem(RegistryAccess registries) {
-        return this.results.isEmpty() ? ItemStack.EMPTY : this.results.get(0).copy();
+    public ItemStack getResultItem(HolderLookup.Provider registries) {
+        return this.results.getFirst().copy();
     }
 
     @Override
@@ -71,11 +75,6 @@ public record TreeOfLifeRecipe(
     @Override
     public boolean showNotification() {
         return false;
-    }
-
-    @Override
-    public ResourceLocation getId() {
-        return this.id;
     }
 
     @Override
@@ -90,55 +89,58 @@ public record TreeOfLifeRecipe(
 
     public static final class Serializer implements RecipeSerializer<TreeOfLifeRecipe> {
 
+        private static final Codec<Ingredient> INGREDIENT_CODEC = Codec.either(Codec.STRING, Ingredient.CODEC_NONEMPTY)
+            .xmap(either -> either.map(Serializer::ingredientFromString, ingredient -> ingredient), Either::right);
+
+        private static final MapCodec<TreeOfLifeRecipe> CODEC = RecordCodecBuilder.mapCodec(instance -> instance.group(
+            INGREDIENT_CODEC.fieldOf("ingredient").forGetter(TreeOfLifeRecipe::ingredient),
+            Codec.INT.optionalFieldOf("root_of_life_count", 1).forGetter(TreeOfLifeRecipe::rootOfLifeCount),
+            Codec.INT.optionalFieldOf("processing_time", 200).forGetter(TreeOfLifeRecipe::processingTime),
+            ItemStack.STRICT_CODEC.listOf().fieldOf("results").forGetter(TreeOfLifeRecipe::results)
+        ).apply(instance, TreeOfLifeRecipe::new));
+
+        private static final StreamCodec<RegistryFriendlyByteBuf, TreeOfLifeRecipe> STREAM_CODEC = StreamCodec.of(
+            Serializer::toNetwork,
+            Serializer::fromNetwork
+        );
+
         @Override
-        public TreeOfLifeRecipe fromJson(ResourceLocation id, JsonObject json) {
-            final JsonElement ingredientJson = json.get("ingredient");
-            final Ingredient ingredient;
-            if (ingredientJson.isJsonPrimitive()) {
-                final String value = ingredientJson.getAsString();
-                ingredient = value.startsWith("#") ? Ingredient.of(TagKey.create(Registries.ITEM, new ResourceLocation(value.substring(1)))) : Ingredient.of(requireItem(new ResourceLocation(value)));
-            }
-            else {
-                ingredient = Ingredient.fromJson(ingredientJson);
-            }
-
-            final int roots = GsonHelper.getAsInt(json, "root_of_life_count", 1);
-            final int time = GsonHelper.getAsInt(json, "processing_time", 200);
-            final List<ItemStack> results = new ArrayList<>();
-
-            final JsonArray resultArray = GsonHelper.getAsJsonArray(json, "results");
-            for (JsonElement element : resultArray) {
-                final JsonObject result = element.getAsJsonObject();
-                results.add(new ItemStack(requireItem(new ResourceLocation(GsonHelper.getAsString(result, "id"))), GsonHelper.getAsInt(result, "count", 1)));
-            }
-            if (results.isEmpty()) {
-                throw new IllegalArgumentException("A Tree of Life recipe must have a result");
-            }
-
-            return new TreeOfLifeRecipe(id, ingredient, roots, time, results);
+        public MapCodec<TreeOfLifeRecipe> codec() {
+            return CODEC;
         }
 
         @Override
-        public TreeOfLifeRecipe fromNetwork(ResourceLocation id, FriendlyByteBuf buffer) {
-            final Ingredient ingredient = Ingredient.fromNetwork(buffer);
+        public StreamCodec<RegistryFriendlyByteBuf, TreeOfLifeRecipe> streamCodec() {
+            return STREAM_CODEC;
+        }
+
+        private static TreeOfLifeRecipe fromNetwork(RegistryFriendlyByteBuf buffer) {
+            final Ingredient ingredient = Ingredient.CONTENTS_STREAM_CODEC.decode(buffer);
             final int roots = buffer.readVarInt();
             final int time = buffer.readVarInt();
             final int size = buffer.readVarInt();
             final List<ItemStack> results = new ArrayList<>(size);
             for (int i = 0; i < size; i++) {
-                results.add(buffer.readItem());
+                results.add(ItemStack.STREAM_CODEC.decode(buffer));
             }
 
-            return new TreeOfLifeRecipe(id, ingredient, roots, time, results);
+            return new TreeOfLifeRecipe(ingredient, roots, time, results);
         }
 
-        @Override
-        public void toNetwork(FriendlyByteBuf buffer, TreeOfLifeRecipe recipe) {
-            recipe.ingredient.toNetwork(buffer);
+        private static void toNetwork(RegistryFriendlyByteBuf buffer, TreeOfLifeRecipe recipe) {
+            Ingredient.CONTENTS_STREAM_CODEC.encode(buffer, recipe.ingredient);
             buffer.writeVarInt(recipe.rootOfLifeCount);
             buffer.writeVarInt(recipe.processingTime);
             buffer.writeVarInt(recipe.results.size());
-            recipe.results.forEach(buffer::writeItem);
+            recipe.results.forEach(stack -> ItemStack.STREAM_CODEC.encode(buffer, stack));
+        }
+
+        private static Ingredient ingredientFromString(String value) {
+            if (value.startsWith("#")) {
+                return Ingredient.of(TagKey.create(Registries.ITEM, ResourceLocation.parse(value.substring(1))));
+            }
+
+            return Ingredient.of(requireItem(ResourceLocation.parse(value)));
         }
 
         private static Item requireItem(ResourceLocation id) {
